packages/taquito-michel-codec/test/contracts_015/ill_typed/view_op_bad_name_too_long.tz
parameter (pair nat address) ;
storage nat ;
code { CAR ; UNPAIR ; VIEW "abcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyz" nat ; IF_SOME { } { PUSH nat 1 } ; NIL operation ; PAIR } ;

